--- a/src/style/MoviesSlideshow.css
+++ b/src/style/MoviesSlideshow.css
@@ -1,6 +1,7 @@
 section {
   display: flex;
   flex-direction: column;
+  row-gap: 1rem;
 }
 
 .moviesContainer {
@@ -20,6 +21,27 @@ section {
   height: 325px;
   position: relative;
   flex-shrink: 0;
+  transition: width 0.3s linear;
+  overflow: hidden;
+  border-radius: 12px;
+  padding: 1rem;
+}
+
+.movieCard:hover {
+  width: 475px;
+}
+
+.movieCard h3 {
+  transform: translateY(300px);
+  margin: 0;
+  font-size: 2rem;
+  transition: all 0.3s linear;
+  opacity: 0;
+}
+
+.movieCard:hover h3 {
+  transform: translateY(100px);
+  opacity: 1;
 }
 
 .posterImg {
@@ -27,7 +49,30 @@ section {
   top: 0;
   left: 0;
   object-fit: cover;
+  height: 100%;
+  width: 100%;
+  object-position: center;
+  transition: opacity 0.3s linear;
+  z-index: -1;
+}
+
+.movieCard:hover .posterImg {
+  opacity: 0;
+}
+
+.movieBgImg {
+  width: auto;
+  position: absolute;
+  object-fit: cover;
   width: 100%;
   height: 100%;
-  object-position: center;
+  opacity: 0;
+  top: 0;
+  left: 0;
+  transition: opacity 0.3s linear;
+  z-index: -1;
+}
+
+.movieCard:hover .movieBgImg {
+  opacity: 1;
 }
