--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800&display=swap");
+/*@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap");*/
+@import url("https://fonts.googleapis.com/css2?family=Avenir:wght@400;500;600;700;800&display=swap");
 
 *, /*init added*/
 *::before,
@@ -12,6 +14,7 @@
 
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  /*font-family: Montserrat;*/
   line-height: 1.5;
   font-weight: 400;
 
