--- a/src/style/MoviesSlideshow.css
+++ b/src/style/MoviesSlideshow.css
@@ -8,28 +8,35 @@ section {
   position: relative;
 }
 
-.moviesArrowsContainer .rightArrow {
-  position: absolute;
-  right: 1rem;
-  top: 100px;
+.arrowsContainer {
   z-index: 3;
-  cursor: pointer;
-  display: none;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  pointer-events: none;
+  padding: 1rem;
 }
 
-.moviesArrowsContainer .leftArrow {
-  position: absolute;
-  left: 1rem;
-  top: 100px;
-  z-index: 3;
+.arrowsContainer .rightArrow {
+  z-index: 4;
+  cursor: pointer;
+  pointer-events: all;
+  width: 2rem;
+  /*display: none;*/
+}
+
+.arrowsContainer .leftArrow {
+  z-index: 4;
   transform: rotate(180deg);
   cursor: pointer;
-  display: none;
-}
-
-.moviesArrowsContainer:hover .rightArrow,
-.moviesArrowsContainer:hover .leftArrow {
-  display: block;
+  pointer-events: all;
+  width: 2rem;
+  /*display: none;*/
 }
 
 .moviesContainer {
@@ -43,71 +50,4 @@ section {
 
 .moviesContainer::-webkit-scrollbar {
   display: none;
-}
-
-.movieCard {
-  width: 225px;
-  height: 325px;
-  position: relative;
-  flex-shrink: 0;
-  transition: width 0.3s linear;
-  overflow: hidden;
-  border-radius: 12px;
-  padding: 1rem;
-}
-
-.movieCard:hover {
-  width: 475px;
-}
-
-.movieCard .movieInfoContainer {
-  display: flex;
-  flex-direction: column;
-  transform: translateY(300px);
-  transition: all 0.3s linear;
-  opacity: 0;
-}
-
-.movieCard:hover .movieInfoContainer {
-  transform: translateY(100px);
-  opacity: 1;
-}
-
-.movieCard h3 {
-  margin: 0;
-  font-size: 2rem;
-}
-
-.posterImg {
-  position: absolute;
-  top: 0;
-  left: 0;
-  object-fit: cover;
-  height: 100%;
-  width: 100%;
-  object-position: center;
-  transition: opacity 0.3s linear;
-  z-index: -1;
-}
-
-.movieCard:hover .posterImg {
-  opacity: 0;
-}
-
-.movieBgImg {
-  width: auto;
-  position: absolute;
-  object-fit: cover;
-  width: 100%;
-  height: 100%;
-  opacity: 0;
-  top: 0;
-  left: 0;
-  transition: opacity 0.3s linear;
-  z-index: -1;
-  filter: brightness(0.8) saturate(0.8);
-}
-
-.movieCard:hover .movieBgImg {
-  opacity: 1;
 }
