--- a/src/style/VerticalMovieCard.css
+++ b/src/style/VerticalMovieCard.css
@@ -29,6 +29,8 @@
 .movieCard h3 {
   margin: 0;
   font-size: 2rem;
+  /*letter-spacing: 0.05rem;*/
+  font-weight: 700;
 }
 
 .posterImg {
@@ -58,7 +60,7 @@
   left: 0;
   transition: opacity 0.3s linear;
   z-index: -1;
-  filter: brightness(0.8) saturate(0.8);
+  filter: brightness(0.75) saturate(0.8);
 }
 
 .movieCard:hover .movieBgImg {
@@ -68,7 +70,7 @@
 .genreTagsContainer {
   display: flex;
   flex-direction: row;
-  column-gap: 0.75rem;
+  column-gap: 0.6rem;
 }
 
 .genreTag {
@@ -76,6 +78,8 @@
   background-color: #ffffffcc;
   color: rgb(0, 5, 13);
   border-radius: 3px;
-  font-size: 13px;
-  font-weight: 600;
+  font-size: 12px;
+  font-weight: 700;
+  border: 1px solid #ffffffdd;
+  /*box-shadow: 0px 3px 6px #00000022;*/
 }
