--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
 /*@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap");*/
 @import url("https://fonts.googleapis.com/css2?family=Avenir:wght@400;500;600;700;800&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Lexend:wght@200;300;400;500;600;700;800;900&display=swap");
 
 *, /*init added*/
 *::before,
