--- a/src/style/Header.css
+++ b/src/style/Header.css
@@ -2,7 +2,7 @@ header {
   display: flex;
   justify-content: space-between;
   flex-direction: row;
-  height: 5rem;
+  height: 8rem;
   align-items: center;
   margin-bottom: 2rem;
 }
@@ -13,7 +13,7 @@ figure {
 
 header ul {
   display: flex;
-  column-gap: 3rem;
+  column-gap: 1rem;
   flex-direction: row;
 }
 
@@ -22,4 +22,10 @@ li {
   font-weight: 400;
   font-size: 20px;
   font-family: "Oswald", sans-serif;
+  padding: 1rem 1rem;
+}
+
+li:hover {
+  color: #ffffffcc;
+  cursor: pointer;
 }
