--- a/src/pages/App.css
+++ b/src/pages/App.css
@@ -1,7 +1,7 @@
 #root {
   max-width: 1440px;
   margin: 0 auto;
-  padding: 0;
+  padding: 0 0 4rem 0;
   display: flex;
   flex-direction: column;
 }
