--- a/src/style/VerticalMovieCard.css
+++ b/src/style/VerticalMovieCard.css
@@ -18,6 +18,29 @@
   /*box-shadow: 0 8px 16px #168ef599;*/
 }
 
+.playContainerBorder {
+  position: absolute;
+  right: 0;
+  bottom: 1rem;
+  height: 106px;
+  width: 118px;
+  background: rgba(255, 255, 255, 0.3);
+  outline: 2px solid rgba(255, 255, 255, 0.4);
+  z-index: 3;
+  border-radius: 118px 0 0 118px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  opacity: 0;
+  transition: all 0.3s linear;
+  transform: translateX(300px);
+}
+
+.movieCard:hover .playContainerBorder {
+  opacity: 1;
+  transform: translateX(0);
+}
+
 .ratingTag {
   background-color: #00050ddd;
   border: 1px solid #1a98ff;
