--- a/src/style/VerticalMovieCard.css
+++ b/src/style/VerticalMovieCard.css
@@ -22,17 +22,22 @@
   position: absolute;
   right: 0;
   bottom: 1rem;
-  height: 106px;
-  width: 118px;
-  background: rgba(255, 255, 255, 0.3);
-  outline: 2px solid rgba(255, 255, 255, 0.4);
+  height: 96px;
+  width: 110px;
+  /*background: rgba(255, 255, 255, 0.25);*/
+  background: linear-gradient(
+    90deg,
+    rgba(255, 255, 255, 0.25),
+    rgba(255, 255, 255, 0.15)
+  );
+  outline: 2px solid rgba(255, 255, 255, 0.35);
   z-index: 3;
-  border-radius: 118px 0 0 118px;
+  border-radius: 300px 0 0 300px;
   display: flex;
   justify-content: center;
   align-items: center;
   opacity: 0;
-  transition: all 0.3s linear;
+  transition: all 0.3s ease-in-out 0.15s;
   transform: translateX(300px);
 }
 
