--- a/src/style/VerticalMovieCardsSlideshow.css
+++ b/src/style/VerticalMovieCardsSlideshow.css
@@ -1,10 +1,10 @@
-section {
+.verticalCardsSlideshow {
   display: flex;
   flex-direction: column;
   row-gap: 1.5rem;
 }
 
-h2 {
+.verticalCardsSlideshow h2 {
   color: #ffffffdd;
   font-family: "Lexend", sans-serif;
 }
