--- a/src/style/HorizontalMovieCard.css
+++ b/src/style/HorizontalMovieCard.css
@@ -1,13 +1,52 @@
 .horizontalMovieCard {
-  width: 450px;
-  height: 280px;
-  background-color: white;
+  width: 320px;
+  height: 200px;
   position: relative;
   flex-shrink: 0;
-  transition: width 0.3s linear;
+  transition: height 0.3s linear;
   border-radius: 12px;
   padding: 0;
   display: flex;
   flex-direction: column;
   border: 1px solid #ffffff20;
+  overflow: hidden;
+  background-color: black;
+  font-family: "Lexend", sans-serif;
+}
+
+.horizontalMovieCard .mainPicContainer {
+  width: 100%;
+  height: 200px;
+  flex-grow: 0;
+  flex-shrink: 0;
+  border-radius: 12px 12px 0 0;
+  overflow: hidden;
+}
+
+.horizontalMovieCard .mainPic {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 12px 12px 0 0;
+}
+
+.horizontalMovieCard:hover {
+  height: 518px;
+  z-index: 4;
+  /*transform: scale(1.15);*/
+}
+
+.horizontalMovieCard h3 {
+  font-family: "Oswald", sans-serif;
+  margin: 0;
+  font-size: 1.5rem;
+  font-weight: 600;
+  color: #ffffffcc;
+}
+
+.horizontalMovieCard .plot {
+  font-weight: 300;
+  color: #ffffffcc;
+  font-size: 14px;
+  font-family: "Lexend", sans-serif;
 }
