--- a/src/pages/App.css
+++ b/src/pages/App.css
@@ -3,7 +3,7 @@
   height: fit-content;
   max-width: 1440px;
   margin: 0 auto;
-  padding: 0 0 8rem 0;
+  /*padding: 0 0 8rem 0;*/
   display: flex;
   flex-direction: column;
 }
