--- a/src/style/Header.css
+++ b/src/style/Header.css
@@ -7,7 +7,7 @@ header {
   margin-bottom: 2rem;
 }
 
-figure {
+header figure {
   transform: translateY(2px) translateX(-14px);
 }
 
@@ -17,7 +17,7 @@ header ul {
   flex-direction: row;
 }
 
-li {
+header li {
   color: #84afda;
   font-weight: 400;
   font-size: 20px;
@@ -25,7 +25,7 @@ li {
   padding: 1rem 1rem;
 }
 
-li:hover {
+header li:hover {
   color: #ffffffcc;
   cursor: pointer;
 }
