--- a/src/style/HorizontalMovieCard.css
+++ b/src/style/HorizontalMovieCard.css
@@ -60,15 +60,61 @@
   transform-origin: center;*/
 }
 
-.movieInfosContainer {
+.horizontalMovieCard .movieInfosContainer {
   height: 100%;
   width: 100%;
   display: flex;
   flex-direction: column;
-  padding: 1rem;
+  padding: 0 1rem;
   row-gap: 0.5rem;
   transition: all 0.15s linear 0.2s;
   transform: translateX(-400px);
+}
+
+.horizontalMovieCard .playAddMoreContainer {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
+  align-items: center;
+  flex-shrink: 0;
+  padding: 1rem 0;
+}
+
+.horizontalMovieCard .playContainer {
+  height: 64px;
+  width: 68px;
+  /*background: rgba(255, 255, 255, 0.25);*/
+  background: linear-gradient(
+    90deg,
+    rgba(255, 255, 255, 0.25),
+    rgba(255, 255, 255, 0.15)
+  );
+  outline: 2px solid rgba(255, 255, 255, 0.35);
+  z-index: 4;
+  border-radius: 0 300px 300px 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: all 0.3s ease-in-out;
+  backdrop-filter: blur(4px);
+}
+
+.horizontalMovieCard .addMoreContainer {
+  height: 64px;
+  width: 128px;
+  background: linear-gradient(
+    90deg,
+    rgba(255, 255, 255, 0.25),
+    rgba(255, 255, 255, 0.15)
+  );
+  outline: 2px solid rgba(255, 255, 255, 0.35);
+  z-index: 4;
+  border-radius: 300px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: all 0.3s ease-in-out;
+  backdrop-filter: blur(4px);
 }
 
 .horizontalMovieCard:hover .movieInfosContainer {
