--- a/src/style/HorizontalMovieCard.css
+++ b/src/style/HorizontalMovieCard.css
@@ -1,7 +1,6 @@
 .horizontalMovieCard {
   width: 320px;
   height: 200px;
-  /*position: relative;*/
   flex-shrink: 0;
   transition: all 0.2s linear;
   border-radius: 12px;
@@ -12,6 +11,8 @@
   overflow: hidden;
   background: linear-gradient(0deg, #000, #242c35);
   font-family: "Lexend", sans-serif;
+  background-repeat: no-repeat;
+  background-clip: padding-box;
 }
 
 .horizontalMovieCard .mainPicContainer {
@@ -19,8 +20,6 @@
   height: 200px;
   flex-grow: 0;
   flex-shrink: 0;
-  /*border-radius: 12px 12px 0 0;*/
-  /*overflow: hidden;*/
   position: relative;
 }
 
@@ -54,7 +53,9 @@
 }
 
 .horizontalMovieCard:hover {
-  height: 518px;
+  /*height: 518px;*/
+  height: fit-content;
+  padding-bottom: 1.25rem;
   z-index: 4;
   /*transform: scale(1.1) translateY(23px);
   transform-origin: center;*/
@@ -86,10 +87,10 @@
   /*background: rgba(255, 255, 255, 0.25);*/
   background: linear-gradient(
     90deg,
-    rgba(255, 255, 255, 0.25),
-    rgba(255, 255, 255, 0.15)
+    rgba(255, 255, 255, 0.15),
+    rgba(255, 255, 255, 0.1)
   );
-  outline: 2px solid rgba(255, 255, 255, 0.35);
+  outline: 2px solid rgba(255, 255, 255, 0.2);
   z-index: 4;
   border-radius: 0 300px 300px 0;
   display: flex;
@@ -100,14 +101,14 @@
 }
 
 .horizontalMovieCard .addMoreContainer {
-  height: 64px;
+  height: 48px;
   width: 128px;
   background: linear-gradient(
     90deg,
-    rgba(255, 255, 255, 0.25),
-    rgba(255, 255, 255, 0.15)
+    rgba(255, 255, 255, 0.1),
+    rgba(255, 255, 255, 0.05)
   );
-  outline: 2px solid rgba(255, 255, 255, 0.35);
+  outline: 2px solid rgba(255, 255, 255, 0.15);
   z-index: 4;
   border-radius: 300px;
   display: flex;
@@ -115,6 +116,7 @@
   align-items: center;
   transition: all 0.3s ease-in-out;
   backdrop-filter: blur(4px);
+  margin-right: 1rem;
 }
 
 .horizontalMovieCard:hover .movieInfosContainer {
