--- a/src/style/HorizontalMovieCard.css
+++ b/src/style/HorizontalMovieCard.css
@@ -7,7 +7,7 @@
   padding: 0;
   display: flex;
   flex-direction: column;
-  border: 1px solid #ffffff20;
+  border: 1px solid #ffffff15;
   overflow: hidden;
   background: linear-gradient(0deg, #000, #242c35);
   font-family: "Lexend", sans-serif;
@@ -68,8 +68,8 @@
   flex-direction: column;
   padding: 0 1rem;
   row-gap: 0.5rem;
-  transition: all 0.15s linear 0.2s;
-  transform: translateX(-400px);
+  transition: all 0.15s linear 0.1s;
+  transform: translateX(-300px);
 }
 
 .horizontalMovieCard .playAddMoreContainer {
@@ -102,7 +102,7 @@
 
 .horizontalMovieCard .addMoreContainer {
   height: 48px;
-  width: 128px;
+  padding: 0 0.5rem;
   background: linear-gradient(
     90deg,
     rgba(255, 255, 255, 0.1),
@@ -117,6 +117,7 @@
   transition: all 0.3s ease-in-out;
   backdrop-filter: blur(4px);
   margin-right: 1rem;
+  column-gap: 1rem;
 }
 
 .horizontalMovieCard:hover .movieInfosContainer {
