--- a/src/style/HorizontalMovieCard.css
+++ b/src/style/HorizontalMovieCard.css
@@ -120,6 +120,10 @@
   column-gap: 1rem;
 }
 
+.horizontalMovieCard .addMoreContainer .addButton {
+  cursor: pointer;
+}
+
 .horizontalMovieCard:hover .movieInfosContainer {
   transform: translateX(0);
 }
