--- a/src/style/VerticalMovieCard.css
+++ b/src/style/VerticalMovieCard.css
@@ -37,12 +37,26 @@
   justify-content: center;
   align-items: center;
   opacity: 0;
-  transition: all 0.3s ease-in-out;
+  transition: all 0.3s linear;
   transform: translateX(300px);
   backdrop-filter: blur(4px);
 }
 
 .movieCard:hover .playContainerBorder {
+  transform: translateX(0);
+  opacity: 1;
+}
+
+.movieCard .ratingWatchlistAddContainer {
+  display: flex;
+  flex-direction: row;
+  column-gap: 1rem;
+  transform: translateY(-300px);
+  opacity: 0;
+  transition: all 0.3s ease-in-out;
+}
+
+.movieCard:hover .ratingWatchlistAddContainer {
   opacity: 1;
   transform: translateX(0);
 }
@@ -60,10 +74,25 @@
   font-weight: 600;
   font-size: 14px;
   color: #fff;
-  transition: all 0.3s linear;
-  transform: translateY(-300px);
-  opacity: 0;
+  /*transition: all 0.3s linear;*/
   column-gap: 9px;
+}
+
+.addWatchlistContainer {
+  background-color: #00050daa;
+  border: 1px solid #414b52;
+  height: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 32px;
+  font-family: "Lexend", sans-serif;
+  font-weight: 600;
+  font-size: 14px;
+  color: #fff;
+  padding: 0 0.75rem;
+  margin-left: auto;
+  cursor: pointer;
 }
 
 .movieCard:hover .ratingTag {
