--- a/src/style/Footer.css
+++ b/src/style/Footer.css
@@ -1,8 +1,18 @@
 footer {
-  height: 24rem;
+  height: 12rem;
   width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  row-gap: 2rem;
+  margin-top: 4rem;
+}
+
+footer ul {
+  font-size: 16x;
+  font-family: "Lexend", sans-serif;
+  display: flex;
+  flex-direction: row;
+  column-gap: 1rem;
 }
