--- a/src/style/VerticalMovieCard.css
+++ b/src/style/VerticalMovieCard.css
@@ -139,6 +139,25 @@
   opacity: 0;
 }
 
+.movieCard video {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  top: 0;
+  left: 0;
+  transition: opacity 0.3s linear;
+  z-index: -1;
+  filter: brightness(0.75) saturate(0.8);
+}
+
+.movieCard:hover video {
+  opacity: 1;
+}
+
 .movieBgImg {
   width: auto;
   position: absolute;
