--- a/src/style/VerticalMovieCardsSlideshow.css
+++ b/src/style/VerticalMovieCardsSlideshow.css
@@ -9,6 +9,7 @@
   flex-direction: row;
   column-gap: 1rem;
   align-items: baseline;
+  width: 100%;
 }
 
 .verticalCardsSlideshow .titleContainer img {
@@ -21,6 +22,28 @@
   color: #84afda;
   font-family: "Lexend", sans-serif;
   cursor: pointer;
+}
+
+.verticalCardsSlideshow .paginationContainer {
+  margin-left: auto;
+  display: flex;
+  align-items: baseline;
+  column-gap: 6px;
+  height: 100%;
+}
+
+.verticalCardsSlideshow .dot {
+  width: 8px;
+  height: 8px;
+  background-color: #ffffff88;
+  border-radius: 6px;
+}
+
+.verticalCardsSlideshow .dot.active {
+  width: 8px;
+  height: 8px;
+  background-color: #ffffffff;
+  border-radius: 6px;
 }
 
 .verticalCardsSlideshow h2 {
