--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,10 @@
   list-style: none;
 }
 
+a {
+  color: rgba(255, 255, 255, 0.87);
+}
+
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   /*font-family: Montserrat;*/
