--- a/src/pages/Movie.css
+++ b/src/pages/Movie.css
@@ -105,3 +105,12 @@ main.moviePage {
   border-radius: 600px;
   box-shadow: 0 8px 16px #00000033;
 }
+
+.moviePage video {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: 5;
+}
