--- a/src/pages/Movie.css
+++ b/src/pages/Movie.css
@@ -131,6 +131,7 @@ main.moviePage {
   flex-direction: column;
   margin-top: 2rem;
   font-family: "Lexend", sans-serif;
+  row-gap: 2rem;
 }
 
 .moviePage .episodesList article {
@@ -157,18 +158,39 @@ main.moviePage {
   outline: 1px solid #ffffff25;
 }
 
+.moviePage .episodesList .timePositionContainer {
+  position: absolute;
+  width: 90%;
+  height: 10px;
+  background-color: #ffffff45;
+  border-radius: 12px;
+  bottom: 1rem;
+  left: 5%;
+  overflow: hidden;
+}
+
+.moviePage .episodesList .timePositionContainer .timePositionBlueBar {
+  display: block;
+  left: 0;
+  top: 0;
+  width: 80%;
+  height: 100%;
+  background-color: #1a98ff;
+  border-radius: 12px;
+}
+
 .moviePage .episodesList .episodeInfosContainer {
   width: 100%;
   display: flex;
   flex-direction: column;
   background: radial-gradient(
       143.25% 127.27% at 81.62% 0%,
-      rgba(255, 255, 255, 0.1) 0%,
+      rgba(255, 255, 255, 0.06) 0%,
       rgba(255, 255, 255, 0) 100%
     ),
     linear-gradient(
       180deg,
-      rgba(255, 255, 255, 0.1) 0%,
+      rgba(255, 255, 255, 0.06) 0%,
       rgba(255, 255, 255, 0.04) 100%
     );
   backdrop-filter: blur(8px);
@@ -176,6 +198,7 @@ main.moviePage {
   border-radius: 12px;
   padding: 1.5rem;
   row-gap: 0.75rem;
+  /*box-shadow: 0 4px 8px #00000066;*/
 }
 
 .moviePage .episodesList .episodeInfosContainer h3 {
@@ -187,7 +210,7 @@ main.moviePage {
 .moviePage .episodesList .episodeInfosContainer ul {
   display: flex;
   flex-direction: row;
-  column-gap: 12px;
+  column-gap: 10px;
 }
 
 .moviePage .episodesList .episodeInfosContainer ul li {
@@ -208,4 +231,5 @@ main.moviePage {
 .moviePage .episodesList .episodeInfosContainer p {
   line-height: 160%;
   max-width: 640px;
+  font-weight: 400;
 }
