--- a/src/pages/Movie.css
+++ b/src/pages/Movie.css
@@ -145,7 +145,7 @@ main.moviePage {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 0 24px;
+  padding: 0 20px 2px 20px;
   border-radius: 34px;
   font-family: "Lexend", sans-serif;
   font-weight: 400;
@@ -190,7 +190,7 @@ main.moviePage {
 .moviePage .episodesList .timePositionContainer {
   position: absolute;
   width: 90%;
-  height: 10px;
+  height: 8px;
   background-color: #ffffff45;
   border-radius: 12px;
   bottom: 1rem;
@@ -262,4 +262,16 @@ main.moviePage {
   line-height: 160%;
   max-width: 640px;
   font-weight: 300;
+}
+
+.moviePage .episodesList .episodeInfosContainer .episodesButtonsContainer {
+  position: absolute;
+  right: 1.5rem;
+  bottom: 1rem;
+  padding: 8px;
+  display: flex;
+  border-radius: 50px;
+  outline: 1px solid #ffffff25;
+  background: linear-gradient(180deg, #ffffff20, #ffffff10);
+  column-gap: 12px;
 }
