--- a/src/style/HorizontalMovieCard.css
+++ b/src/style/HorizontalMovieCard.css
@@ -55,6 +55,7 @@
   top: 0;
   left: 0;
   overflow-clip-margin: unset;
+  filter: saturate(0.85) contrast(0.9) brightness(0.95);
 }
 
 .horizontalMovieCard:hover {
