--- a/src/pages/Movie.css
+++ b/src/pages/Movie.css
@@ -129,18 +129,36 @@ main.moviePage {
   display: flex;
   align-self: center;
   margin-top: 3rem;
+  width: 100%;
+  background: rgba(27, 46, 63, 0.45);
+  height: 72px;
+  box-shadow: 0px 16px 32px 0px rgba(0, 0, 0, 0.3);
+  border-radius: 12px;
+  justify-content: center;
 }
 
 .moviePage .secondaryNav ul {
   display: flex;
-  column-gap: 2rem;
   flex-direction: row;
 }
 
 .moviePage .secondaryNav ul li {
   display: flex;
-  border: 1px solid #fff;
-  padding: 0.5rem 1rem;
+  padding: 0 42px;
+  cursor: pointer;
+  color: #84afda;
+  font-weight: 400;
+  font-size: 20px;
+  font-family: "Oswald", sans-serif;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+  opacity: 0.8;
+}
+
+.moviePage .secondaryNav ul li.active {
+  color: rgba(27, 46, 63, 0.8);
+  background-color: #ffffff88;
 }
 
 .moviePage .episodesList {
