--- a/src/pages/Movie.css
+++ b/src/pages/Movie.css
@@ -146,19 +146,20 @@ main.moviePage {
   display: flex;
   padding: 0 42px;
   cursor: pointer;
-  color: #84afda;
+  color: #84afdacc;
   font-weight: 400;
   font-size: 20px;
   font-family: "Oswald", sans-serif;
   height: 100%;
   justify-content: center;
   align-items: center;
-  opacity: 0.8;
 }
 
 .moviePage .secondaryNav ul li.active {
-  color: rgba(27, 46, 63, 0.8);
-  background-color: #ffffff88;
+  color: rgba(27, 46, 63, 1);
+  background: linear-gradient(180deg, #f3f9ff 0%, #c8e2fd 92.71%, #96c9ff 100%),
+    #fff;
+  font-weight: 600;
 }
 
 .moviePage .episodesList {
