movie page : creator section

--- a/src/style/CastList.css
+++ b/src/style/CastList.css
@@ -1,8 +1,14 @@
 .castSection {
   display: flex;
   flex-direction: column;
-  margin-top: 2.5rem;
+  margin-top: 3.75rem;
   row-gap: 2rem;
+}
+
+.castSection h2 {
+  color: #ffffffdd;
+  font-family: "Lexend", sans-serif;
+  font-size: 24px;
 }
 
 .castContainer {
@@ -11,6 +17,35 @@
   flex-wrap: wrap;
   column-gap: 2rem;
   row-gap: 2rem;
+}
+
+.creatorArticle {
+  display: flex;
+  flex-direction: column;
+}
+
+.creatorBio {
+  display: flex;
+  background: radial-gradient(
+      143.25% 127.27% at 81.62% 0%,
+      rgba(255, 255, 255, 0.06) 0%,
+      rgba(255, 255, 255, 0) 100%
+    ),
+    linear-gradient(
+      180deg,
+      rgba(255, 255, 255, 0.06) 0%,
+      rgba(255, 255, 255, 0.04) 100%
+    );
+  backdrop-filter: blur(8px);
+  outline: 1px solid #ffffff25;
+  border-radius: 12px;
+  padding: 1.5rem 2rem;
+  column-gap: 6rem;
+}
+
+.creatorBio img {
+  aspect-ratio: 1;
+  border-radius: 100%;
 }
 
 .castArticle {
@@ -33,6 +68,7 @@
   column-gap: 2rem;
   min-width: 366px;
   font-family: "Lexend", sans-serif;
+  /*box-shadow: 0 8px 16px #000;*/
 }
 
 .castArticle picture {
