--- a/src/style/usersReviewsList.css
+++ b/src/style/usersReviewsList.css
@@ -26,11 +26,12 @@ article.usersReview {
 article.usersReview p {
   font-weight: 300;
   max-width: 70%;
+  line-height: 160%;
 }
 
 article.usersReview h3 {
   color: #ffffffdd;
   font-family: "Lexend", sans-serif;
-  font-size: 24px;
+  font-size: 20px;
   margin-bottom: 0.75rem;
 }
