--- a/src/style/MovieGallery.css
+++ b/src/style/MovieGallery.css
@@ -27,9 +27,26 @@
 }
 
 .galleryContainer article:hover {
-  border: 1px solid #1a98ff;
+  border: 2px solid #1a98ff;
 }
 
 .galleryContainer article:hover img {
   transform: scale(1.1);
+}
+
+dialog {
+  position: fixed;
+  width: 50%;
+  height: 50%;
+  top: auto;
+  bottom: auto;
+  left: auto;
+  right: auto;
+  z-index: 5;
+}
+
+dialog .fullsizePicture {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
