--- a/src/style/MovieGallery.css
+++ b/src/style/MovieGallery.css
@@ -35,19 +35,15 @@
 }
 
 dialog {
-  position: fixed;
-  width: 50%;
-  height: 50%;
-  top: auto;
-  bottom: auto;
-  left: auto;
-  right: auto;
   z-index: 5;
-  border: 0;
+  border: none;
+  margin: auto;
+  display: flex;
+  outline: none;
 }
 
 dialog::backdrop {
-  background-color: #00000066;
+  background-color: #00000088;
   z-index: 4;
   width: 100%;
   height: 100%;
