--- a/src/style/MovieGallery.css
+++ b/src/style/MovieGallery.css
@@ -57,11 +57,11 @@ dialog {
   padding: 0;
   border: none !important;
   margin: auto;
-  background-color: red;
+  max-width: 1440px;
 }
 
 dialog::backdrop {
-  background-color: #000000aa;
+  background-color: #000000dd;
   z-index: 4;
   padding: 0;
   margin: 0;
@@ -100,4 +100,20 @@ dialog .galleryHeader {
   left: 50%;
   transform: translate(-50%, 0);
   background-color: #333435;
+}
+
+dialog .galleryFooter {
+  height: 8rem;
+  width: 100%;
+  max-width: 1440px;
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translate(-50%, 0);
+  background-color: #333435;
+}
+
+dialog:modal {
+  max-width: 100vw;
+  max-height: 100vh;
 }
