--- a/src/style/MovieGallery.css
+++ b/src/style/MovieGallery.css
@@ -51,13 +51,13 @@ dialog {
   display: flex;
   outline: none;
   background: none;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   flex-direction: column;
   padding: 0 2rem;
   border: none !important;
   margin: auto;
-  max-width: 1440px;
+  /*max-width: 1440px;*/
 }
 
 dialog::backdrop {
@@ -65,8 +65,8 @@ dialog::backdrop {
   z-index: 4;
   padding: 0;
   margin: 0;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   border: none;
   outline: none;
 }
