--- a/src/style/MovieGallery.css
+++ b/src/style/MovieGallery.css
@@ -53,8 +53,12 @@
   left: 0;
   width: 100%;
   height: 2.5rem;
-  background: rgba(27, 46, 63, 0.6);
-  border-top: 1px solid #ffffff33;
+  background: linear-gradient(
+    0deg,
+    rgba(27, 46, 63, 0.6),
+    rgba(27, 46, 63, 0.6)
+  );
+  border-top: 1px solid #ffffff22;
   display: flex;
   align-items: center;
   padding: 0 1rem;
